#226 Fix upload box button alignment

--- a/src/modules/ui/_form.scss
+++ b/src/modules/ui/_form.scss
@@ -260,3 +260,10 @@
         }
     }
 }
+
+// File upload (eg. upload sound modal)
+.fileUpload-3JzU7g{
+    .fileUploadButton-2zOQcO{
+        margin: 0;
+    }
+}
